// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cartView responds with cart and EMPTY_SCREEN for empty cart scenario 1`] = `
Object {
  "cartView": Object {
    "cart": Object {
      "bundles": Array [],
      "cartId": "success-guest-empty-cart-id",
      "id": "success-guest-empty-cart-id",
    },
    "id": "cart-view",
    "mandatoryAction": null,
    "screen": "EMPTY_SCREEN",
  },
}
`;

exports[`cartView responds with cart and NO_ACCOUNT_SCREEN for Spark Id cart with no accounts scenario 1`] = `
Object {
  "cartView": Object {
    "cart": null,
    "id": "cart-view",
    "mandatoryAction": null,
    "screen": "NO_ACCOUNT_SCREEN",
  },
}
`;

exports[`cartView responds with cart and OVERVIEW_SCREEN for guest scenario 1`] = `
Object {
  "cartView": Object {
    "cart": Object {
      "bundles": Array [
        Object {
          "bundleId": "f4abe282-ac3a-4ba9-9b84-655486784325",
          "items": Array [
            Object {
              "itemId": "f8f3f20a-e100-4de5-b013-6effd77fe792",
              "title": "$79.99 Endless Plan",
            },
            Object {
              "itemId": "7b7360df-f79e-4ee5-9e03-a653d4874315",
              "title": "Spotify Premium",
            },
            Object {
              "itemId": "f68a7ca0-e6e4-4b52-966c-29b6fd63adee",
              "title": "iPhone 13 Pro 128GB - Graphite",
            },
            Object {
              "itemId": "109c861e-e438-4b47-a525-57566f290904",
              "title": "Interest free payment over 24 months",
            },
          ],
        },
        Object {
          "bundleId": "f2b09286-4a6c-4415-8571-c418e8b5ac2b",
          "items": Array [
            Object {
              "itemId": "34ea9285-150a-4f62-a6ff-15cfcbcb0e8f",
              "title": "$20 Prepaid Value Pack",
            },
            Object {
              "itemId": "2ae5a775-dad8-44df-8ec0-88bee05d464b",
              "title": "Spotify Premium",
            },
          ],
        },
        Object {
          "bundleId": "bb7ee884-e02a-43c0-bcca-703ed0ec0c4d",
          "items": Array [
            Object {
              "itemId": "ce7b812f-88a5-47b3-9277-f94bbe095434",
              "title": "Neon",
            },
          ],
        },
        Object {
          "bundleId": "66eb43c7-295b-4d86-ad3d-5e09ce43fc37",
          "items": Array [
            Object {
              "itemId": "2de00c16-9e22-40af-98d2-784b64821baa",
              "title": "$59.99 Endless Plan",
            },
            Object {
              "itemId": "e258d2d9-4bf5-4686-b870-239072ee1f8d",
              "title": "Spotify Premium",
            },
          ],
        },
      ],
      "cartId": "success-guest-plans-cart-id",
      "id": "success-guest-plans-cart-id",
    },
    "id": "cart-view",
    "mandatoryAction": null,
    "screen": "OVERVIEW_SCREEN",
  },
}
`;

exports[`cartView responds with cart, OVERVIEW_SCREEN and CHOOSE_ACCOUNT mandatory action for Spark Id cart without account number scenario 1`] = `
Object {
  "cartView": Object {
    "cart": Object {
      "bundles": Array [
        Object {
          "bundleId": "f4abe282-ac3a-4ba9-9b84-655486784325",
          "items": Array [
            Object {
              "itemId": "f8f3f20a-e100-4de5-b013-6effd77fe792",
              "title": "$79.99 Endless Plan",
            },
            Object {
              "itemId": "7b7360df-f79e-4ee5-9e03-a653d4874315",
              "title": "Spotify Premium",
            },
            Object {
              "itemId": "f68a7ca0-e6e4-4b52-966c-29b6fd63adee",
              "title": "iPhone 13 Pro 128GB - Graphite",
            },
            Object {
              "itemId": "109c861e-e438-4b47-a525-57566f290904",
              "title": "Interest free payment over 24 months",
            },
          ],
        },
        Object {
          "bundleId": "f2b09286-4a6c-4415-8571-c418e8b5ac2b",
          "items": Array [
            Object {
              "itemId": "34ea9285-150a-4f62-a6ff-15cfcbcb0e8f",
              "title": "$20 Prepaid Value Pack",
            },
            Object {
              "itemId": "2ae5a775-dad8-44df-8ec0-88bee05d464b",
              "title": "Spotify Premium",
            },
          ],
        },
        Object {
          "bundleId": "bb7ee884-e02a-43c0-bcca-703ed0ec0c4d",
          "items": Array [
            Object {
              "itemId": "ce7b812f-88a5-47b3-9277-f94bbe095434",
              "title": "Neon",
            },
          ],
        },
        Object {
          "bundleId": "66eb43c7-295b-4d86-ad3d-5e09ce43fc37",
          "items": Array [
            Object {
              "itemId": "2de00c16-9e22-40af-98d2-784b64821baa",
              "title": "$59.99 Endless Plan",
            },
            Object {
              "itemId": "e258d2d9-4bf5-4686-b870-239072ee1f8d",
              "title": "Spotify Premium",
            },
          ],
        },
      ],
      "cartId": "success-spark-id-plans-cart-id",
      "id": "success-spark-id-plans-cart-id",
    },
    "id": "cart-view",
    "mandatoryAction": "CHOOSE_ACCOUNT",
    "screen": "OVERVIEW_SCREEN",
  },
}
`;

exports[`cartView responds with cart, OVERVIEW_SCREEN and no mandatory action for Spark Id cart with account number scenario 1`] = `
Object {
  "cartView": Object {
    "cart": Object {
      "bundles": Array [
        Object {
          "bundleId": "f4abe282-ac3a-4ba9-9b84-655486784325",
          "items": Array [
            Object {
              "itemId": "f8f3f20a-e100-4de5-b013-6effd77fe792",
              "title": "$79.99 Endless Plan",
            },
            Object {
              "itemId": "7b7360df-f79e-4ee5-9e03-a653d4874315",
              "title": "Spotify Premium",
            },
            Object {
              "itemId": "f68a7ca0-e6e4-4b52-966c-29b6fd63adee",
              "title": "iPhone 13 Pro 128GB - Graphite",
            },
            Object {
              "itemId": "109c861e-e438-4b47-a525-57566f290904",
              "title": "Interest free payment over 24 months",
            },
          ],
        },
        Object {
          "bundleId": "f2b09286-4a6c-4415-8571-c418e8b5ac2b",
          "items": Array [
            Object {
              "itemId": "34ea9285-150a-4f62-a6ff-15cfcbcb0e8f",
              "title": "$20 Prepaid Value Pack",
            },
            Object {
              "itemId": "2ae5a775-dad8-44df-8ec0-88bee05d464b",
              "title": "Spotify Premium",
            },
          ],
        },
        Object {
          "bundleId": "bb7ee884-e02a-43c0-bcca-703ed0ec0c4d",
          "items": Array [
            Object {
              "itemId": "ce7b812f-88a5-47b3-9277-f94bbe095434",
              "title": "Neon",
            },
          ],
        },
        Object {
          "bundleId": "66eb43c7-295b-4d86-ad3d-5e09ce43fc37",
          "items": Array [
            Object {
              "itemId": "2de00c16-9e22-40af-98d2-784b64821baa",
              "title": "$59.99 Endless Plan",
            },
            Object {
              "itemId": "e258d2d9-4bf5-4686-b870-239072ee1f8d",
              "title": "Spotify Premium",
            },
          ],
        },
      ],
      "cartId": "success-spark-id-plans-with-account-number-cart-id",
      "id": "success-spark-id-plans-with-account-number-cart-id",
    },
    "id": "cart-view",
    "mandatoryAction": null,
    "screen": "OVERVIEW_SCREEN",
  },
}
`;

exports[`cartView responds with null cart and EMPTY_SCREEN for cart error scenario 1`] = `
Object {
  "cartView": Object {
    "cart": null,
    "id": "cart-view",
    "mandatoryAction": null,
    "screen": "EMPTY_SCREEN",
  },
}
`;
